--- a/app/views/prototypes/raph/role-main-old.html
+++ b/app/views/prototypes/raph/role-main-old.html
@@ -38,56 +38,75 @@
       <h1 class="govuk-fieldset__heading">
         What is John's main role?
       </h1>
-    </legend><br>
+    </legend>
+    <br>
+    
+    
+        <div id="waste-hint" class="govuk-hint">
+          Select the role where they spend most of their time.
+        </div><br>
     
     <div class="govuk-radios">
       
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-lead1" name="" type="radio" value="leader">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+        <label class="govuk-label govuk-radios__label" for="leader">
           Senior leader
         </label>
+        <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          Principal, vice-principal, director, CEO, head of FE service or training
+
+
+        </div>
+
+      </div><br>
         
-      </div>
+     
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-lead2" name="" type="radio" value="manager">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+        <label class="govuk-label govuk-radios__label" for="manager">
           Manager
-        </label>
-        
-
-        
-      </div>
+        </label><div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          Middle management
+        </div>
+      </div><br>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-lead3" name="" type="radio" value="teacher">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+        <label class="govuk-label govuk-radios__label" for="">
           Teacher
         </label>
         
-      </div>
+        <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          Lecturer, teacher, trainer or tutor
+        </div>
+      </div><br>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-lead4" name="" type="radio" value="support">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+        <label class="govuk-label govuk-radios__label" for="">
           Teaching support
         </label>
-      </div>
+        <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          Teaching assistant, mentor, assessor
+        </div>
+      </div><br>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-lead5" name="" type="radio" value="admin">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+        <label class="govuk-label govuk-radios__label" for="admin">
           Administration
         </label>
-      </div>
+        <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          Those that support the delivery of teaching. HR, data officer
+        </div>
 
     </div>
   </fieldset>
 </div>
 
 <br>
-
 
 <a href="#" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
   Continue
