--- a/app/views/prototypes/raph/role-main.html
+++ b/app/views/prototypes/raph/role-main.html
@@ -39,6 +39,10 @@
         What is John's main role?
       </h1>
     </legend><br>
+    <div id="waste-hint" class="govuk-hint">
+      Select the role where they spend most of their time.
+    </div><br>
+
     
     <div class="govuk-radios">
       
