--- a/app/views/prototypes/raph/role-main.html
+++ b/app/views/prototypes/raph/role-main.html
@@ -29,69 +29,59 @@
 
   <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-            
-
+          
 
 <div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
       <h1 class="govuk-fieldset__heading">
         What is John's main role?
       </h1>
-    </legend><br>
-    <div id="waste-hint" class="govuk-hint">
-      Select the role where they spend most of their time.
-    </div><br>
+    </legend>
 
+    <br>
     
+    
+        <div id="waste-hint" class="govuk-hint">
+          Select the role where they spend most of their time.
+        </div><br>
+
     <div class="govuk-radios">
-      
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-lead1" name="" type="radio" value="leader">
+        <input class="govuk-radios__input" id="radio-lead1" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
           Senior leader
         </label>
-        
       </div>
-
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-lead2" name="" type="radio" value="manager">
+        <input class="govuk-radios__input" id="radio-lead2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Manager
+          Manger
         </label>
-        
-
-        
       </div>
-
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-lead3" name="" type="radio" value="teacher">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+        <input class="govuk-radios__input" id="radio-lead3" name="where-do-you-live" type="radio" value="wales">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
           Teacher
         </label>
-        
       </div>
-
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-lead4" name="" type="radio" value="support">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+        <input class="govuk-radios__input" id="radio-lead4" name="where-do-you-live" type="radio" value="northern-ireland">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
           Teaching support
         </label>
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-lead5" name="" type="radio" value="admin">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+        <input class="govuk-radios__input" id="radio-lead5" name="where-do-you-live" type="radio" value="northern-ireland">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
           Administration
         </label>
       </div>
+    </div><br>
 
-    </div>
   </fieldset>
 </div>
-
-<br>
-
 
 <a href="#" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
   Continue
