--- a/app/views/prototypes/raph/teaching-qualification.html
+++ b/app/views/prototypes/raph/teaching-qualification.html
@@ -40,6 +40,10 @@
         Do they have professional teaching status?
       </h1>
     </legend><br>
+
+    <div class="govuk-inset-text">
+      There is an option to answer that you don't know - this year. You will need to give an answer next year.
+    </div><br>
     
     <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
@@ -90,6 +94,12 @@
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
         </div>
 
+      </div>
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          Don't know
+        </label>
       </div>
 
       
