--- a/app/views/prototypes/raph/what-teaching-qualification.html
+++ b/app/views/prototypes/raph/what-teaching-qualification.html
@@ -39,11 +39,9 @@
       <h1 class="govuk-fieldset__heading">
         What is their highest teaching qualification?
       </h1>
-    </legend>
+    </legend><br>
 
-    <div class="govuk-inset-text">
-      There is an option to answer that you don't know - this year. You will need to give an answer next year.
-    </div><br>
+    
     
     <div class="govuk-radios">
 
@@ -120,12 +118,7 @@
         </span>
       </div>
 
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
-          Unsure
-        </label>
-      </div><br>
+      
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
