--- a/app/views/prototypes/raph/english.html
+++ b/app/views/prototypes/raph/english.html
@@ -40,7 +40,7 @@
       </h1>
     </legend>
     <div class="govuk-inset-text">
-      There is an option to answer that you don't know - this year. You will need to give an answer next year.
+      This year you can select the 'Don't know' option but you will need to give an answer next year.
     </div><br>
     
     
