--- a/app/views/prototypes/raph/teaching-qualification.html
+++ b/app/views/prototypes/raph/teaching-qualification.html
@@ -42,7 +42,7 @@
     </legend><br>
 
     <div class="govuk-inset-text">
-      There is an option to answer that you don't know - this year. You will need to give an answer next year.
+      This year you can select the 'Don't know' option but you will need to give an answer next year.
     </div><br>
     
     <div class="govuk-checkboxes">
