--- a/app/views/prototypes/governors/staff-zero1.html
+++ b/app/views/prototypes/governors/staff-zero1.html
@@ -78,9 +78,23 @@
   </div>
   
 
-</dl>
+</dl><br>
 
+<h2 class="govuk-heading-m govuk-!-font-size-27">Check and submit</h2>
 
+<p class="govuk-body">By submitting, you are confirming that to the best of your knowledge, the details you are providing are correct.</p><br>
+
+<form action="/form-handler" method="post" novalidate>
+
+  <input type="hidden" name="answers-checked" value="true">
+
+  <a href="confirmation" class="govuk-button show-continue">
+Submit
+</a>
+
+&nbsp; &nbsp;
+
+<a href="start-staff"  class="govuk-button govuk-button--secondary">Save and finish later</a>
  
 
         </form>
