--- a/app/views/prototypes/governors/confirmation.html
+++ b/app/views/prototypes/governors/confirmation.html
@@ -34,7 +34,7 @@
       <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-            Staff details submitted
+            Governor list submitted
           </h1>
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
