--- a/app/views/prototypes/governors/home.html
+++ b/app/views/prototypes/governors/home.html
@@ -64,7 +64,7 @@
 
                 <div class="govuk-grid-column-one-third tile">
                     <a class="min-height" href="start-intro2">
-                        <span class="govuk-heading-m heading">Tell us about your govenors</span>
+                        <span class="govuk-heading-m heading">Tell us about your governors</span>
                         <span class="govuk-heading-s heading">28 August 2021</span>
                     </a>
                     <div class="govuk-body govuk-!-font-size-19 warning-info">4 days left to submit</div>
