--- a/app/views/prototypes/governors/confirmation.html
+++ b/app/views/prototypes/governors/confirmation.html
@@ -44,7 +44,7 @@
         <p class="govuk-body">We have sent you a confirmation email.</p>
 
         
-        <h2 class="govuk-heading-m">Return to your <a href="start-staff-end" class="govuk-link">start page</a></h2>
+        <h2 class="govuk-heading-m">Return to your <a href="staff-zero1" class="govuk-link">list</a></h2>
 
         <!--<p class="govuk-body">
           We’ve sent your application to Hackney Electoral Register Office.
