--- a/app/views/prototypes/raph/staff-zero.html
+++ b/app/views/prototypes/raph/staff-zero.html
@@ -48,49 +48,26 @@
 <h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>
 
 
-<table class="govuk-table">
+<dl class="govuk-summary-list govuk-!-margin-bottom-1">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
+        Charles Paris
+      </a>
+    </dt>
+    
+    <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="edit">
+        Delete<span class="govuk-visually-hidden"></span>
+      </a>
+    </dd>
 
-<thead class="govuk-table__head">
-<tr class="govuk-table__row">
-
-<th class="govuk-table__cell--numeric"></th>
-</tr>
-</thead>
-
-
-
-<tbody class="govuk-table__body">
-
-
-
-<tr class="govuk-table__row">
-
-<td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
-<a href="complete-john" class="govuk-link govuk-link--no-visited-state">
-  John Adams
-</a>
-</h3>
-
-  </td>
+  </div>
+ 
+  </div>
   
-   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-    Delete<span class="govuk-table__cell--numeric"></span>
-  </a></td></tr>
-</tr>
 
-<tr class="govuk-table__row">
-
-  
-  
-  
-  
-   
-  </tr>
-
-
-
-</tbody>
-</table><br>
+</dl><br>
 
 
  
