--- a/app/views/prototypes/raph/staff-zero.html
+++ b/app/views/prototypes/raph/staff-zero.html
@@ -52,7 +52,7 @@
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
-        Charles Paris
+        John Adams
       </a>
     </dt>
     
