--- a/app/views/prototypes/governors/add-two.html
+++ b/app/views/prototypes/governors/add-two.html
@@ -355,8 +355,8 @@
   </fieldset><br><br><br>
 
 
-          <a href="staff-zero1" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+          <a href="leader" class="govuk-button show-continue" style="display: inline;">
+      Continue
     </a>
        
       </div>
