--- a/app/views/prototypes/governors/add.html
+++ b/app/views/prototypes/governors/add.html
@@ -358,8 +358,8 @@ Prefer not to say
   <br><br><br>
 
 
-          <a href="staff-zero" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+          <a href="leader" class="govuk-button show-continue" style="display: inline;">
+      Continue
     </a>
        
       </div>
