--- a/app/views/prototypes/governors/date.html
+++ b/app/views/prototypes/governors/date.html
@@ -25,7 +25,7 @@
 
         
 
-   <span class="govuk-caption-xl">John Adams </span>
+   <span class="govuk-caption-xl">Charles Paris </span>
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -35,7 +35,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-              When did they start working for your organisation?
+              When did they start?
 
 </h1>
 
@@ -79,7 +79,7 @@
 <br>
 
 
-          <a href="how-long-role" class="govuk-button show-continue" style="display: inline;">
+          <a href="staff-zero" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
