--- a/app/views/prototypes/governors/leader.html
+++ b/app/views/prototypes/governors/leader.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Is John the head of your FE provision?
+        Are they the chair of governors?
       </h1>
     </legend>
   
@@ -55,7 +55,7 @@
       
       <div class="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="radio-leader1" name="teach" type="radio" value="#">
+          <input class="govuk-radios__input" id="" name="teach" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose">
           Yes 
           </label>
@@ -69,9 +69,9 @@
 
 
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="radio-leader2" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
+          <input class="govuk-radios__input" id="" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
           <label class="govuk-label govuk-radios__label" for="leader">
-            No - but a member of the senior leadership team
+            No 
           </label>
           <!--<div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
             Apprenticeships, traineeships, T levels
@@ -90,7 +90,7 @@
   </div><br><br>
 
 
-  <a href="#" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
+  <a href="date" class="govuk-button show-continue" style="display: inline;">
     Continue
   </a>
        
