--- a/app/views/prototypes/governors/add-two.html
+++ b/app/views/prototypes/governors/add-two.html
@@ -355,7 +355,7 @@
   </fieldset><br><br><br>
 
 
-          <a href="leader" class="govuk-button show-continue" style="display: inline;">
+          <a href="leader2" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
