--- a/app/views/prototypes/governors/start-intro2.html
+++ b/app/views/prototypes/governors/start-intro2.html
@@ -38,7 +38,7 @@
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">FE governors collection</h1>
+        <h1 class="govuk-heading-xl">Tell us about your governors</h1>
         <span class="govuk-caption-l">August 2020 to July 2021</span><br>
 
         <p class="govuk-body">As a college you need to submit information about your governors </p>
