--- a/app/views/prototypes/governors/add.html
+++ b/app/views/prototypes/governors/add.html
@@ -136,7 +136,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
-          Other
+          Identifies in another way
         </label>
         <span id="ethnic-group-3-item-hint" class="govuk-hint govuk-radios__hint">
           
