--- a/app/views/prototypes/raph/role-main.html
+++ b/app/views/prototypes/raph/role-main.html
@@ -56,7 +56,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-lead2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Manger
+          Manager
         </label>
       </div>
       <div class="govuk-radios__item">
