--- a/app/views/prototypes/raph/maths.html
+++ b/app/views/prototypes/raph/maths.html
@@ -45,7 +45,7 @@
     
 
     <div class="govuk-inset-text">
-      This year you can select the 'Don't know' option but you will need to give an answer next year.
+      This year you can select 'Don't know' but you will need to give an answer next year.
     </div><br>
     <div class="govuk-radios">
       
