--- a/app/views/prototypes/second/start-staff.html
+++ b/app/views/prototypes/second/start-staff.html
@@ -21,7 +21,7 @@
 
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-full">
       
  
 
@@ -33,21 +33,89 @@
     <br><br>
   <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
 
-        
-  <form action="/form-handler" method="post" novalidate>
-
-    <input type="hidden" name="answers-checked" value="true">
+    <p>You must tell us about the staff you employ if you receive direct funding from ESFA.</p>
+    <br>
 
     <a href="many-vacancies" class="govuk-button show-continue">
    Start a new submission
 </a>
-<!--&nbsp; &nbsp;
 
-<a href="start-staff"  class="govuk-button govuk-button--secondary">Save and finish later</a>-->
-
-  </form> <br>
+   <br><br>
 
   <h3 class="govuk-heading-m">Your submitted and saved staff information</h3>
+
+  <table class="govuk-table">
+    <thead class="govuk-table__head">
+      <tr class="govuk-table__row">
+        <th scope="col" class="govuk-table__header">Last action</th>
+        <th scope="col" class="govuk-table__header">Staff</th>
+        <th scope="col" class="govuk-table__header">Status</th>
+        <th scope="col" class="govuk-table__header">Actions</th>
+      </tr>
+    </thead>
+    <tbody class="govuk-table__body">
+        <tr class="govuk-table__row">
+            <td class="govuk-table__cell">09/10/2020 - 12:30PM</td>
+            <td class="govuk-table__cell">233</td>
+            <td class="govuk-table__cell"><strong class="govuk-tag">
+                Saved
+              </strong></td>
+            <td class="govuk-table__cell"><a href="subcontractor-summary">Edit</a><br>
+              <a href="delete-confirmation">Delete</a></td>
+          </tr>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">09/08/2020 - 12:30PM</td>
+            <td class="govuk-table__cell">243</td>
+        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
+            Submitted
+          </strong></td>
+          <td class="govuk-table__cell"> <a href="#" title="Download declaration">Download as PDF</a>
+          </td>
+          
+      </tr>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">09/10/2019 - 12:30PM</td>
+            <td class="govuk-table__cell">214</td>
+        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
+            Submitted
+          </strong></td>
+          <td class="govuk-table__cell"> <a href="#" title="Download declaration">Download as PDF</a>
+      
+          </td>
+      </tr>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">09/08/2019 - 12:30PM</td>
+            <td class="govuk-table__cell">311</td>
+        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
+            Submitted
+          </strong></td>
+          <td class="govuk-table__cell"> <a href="#" title="Download declaration">Download as PDF</a>
+              
+          </td>
+
+      </tr>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">09/10/2018 - 12:30PM</td>
+            <td class="govuk-table__cell">256</td>
+        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
+            Submitted
+          </strong></td>
+          <td class="govuk-table__cell"> <a href="#" title="Download declaration">Download as PDF</a>
+          </td>
+
+      </tr>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">09/04/2018 - 12:30PM</td>
+            <td class="govuk-table__cell">278</td>
+        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
+            Submitted
+          </strong></td>
+          <td class="govuk-table__cell"> <a href="#" title="Download declaration">Download as PDF</a>
+          </td>
+
+      </tr>
+    </tbody>
+  </table>
 
         <table class="govuk-table">
           <!-- <caption class="govuk-table__caption">Older versions of the ILR FileMerge tool</caption> -->
