--- a/app/views/prototypes/second/start-staff.html
+++ b/app/views/prototypes/second/start-staff.html
@@ -60,7 +60,7 @@
             <td class="govuk-table__cell"><strong class="govuk-tag">
                 Saved
               </strong></td>
-            <td class="govuk-table__cell"><a href="subcontractor-summary">Edit</a><br>
+            <td class="govuk-table__cell"><a href="answers-provider">Edit</a><br>
               <a href="delete-confirmation">Delete</a></td>
           </tr>
       <tr class="govuk-table__row">
