--- a/app/views/prototypes/second/answers-provider.html
+++ b/app/views/prototypes/second/answers-provider.html
@@ -29,7 +29,7 @@
 
   
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds-from-desktop">
+      <div class="govuk-grid-column-full">
 
         <h1 class="govuk-heading-xl">Check your answers</h1>
 
