--- a/app/views/prototypes/second/start-staff.html
+++ b/app/views/prototypes/second/start-staff.html
@@ -48,15 +48,15 @@
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
         <th scope="col" class="govuk-table__header">Last action</th>
-        <th scope="col" class="govuk-table__header">Staff</th>
+        <th scope="col" class="govuk-table__header">Section</th>
         <th scope="col" class="govuk-table__header">Status</th>
         <th scope="col" class="govuk-table__header">Actions</th>
       </tr>
     </thead>
     <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-            <td class="govuk-table__cell">09/10/2020 - 12:30PM</td>
-            <td class="govuk-table__cell">233</td>
+            <td class="govuk-table__cell">19/10/2020 - 11:15am</td>
+            <td class="govuk-table__cell">Staff</td>
             <td class="govuk-table__cell"><strong class="govuk-tag">
                 Saved
               </strong></td>
@@ -64,56 +64,28 @@
               <a href="delete-confirmation">Delete</a></td>
           </tr>
       <tr class="govuk-table__row">
-        <td class="govuk-table__cell">09/08/2020 - 12:30PM</td>
-            <td class="govuk-table__cell">243</td>
+        <td class="govuk-table__cell">09/08/2020 - 12:30pm</td>
+            <td class="govuk-table__cell">Organisation</td>
         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
             Submitted
           </strong></td>
-          <td class="govuk-table__cell"> <a href="#" title="Download declaration">Download as PDF</a>
+          <td class="govuk-table__cell"> <a href="#" title="Download declaration">View</a>
           </td>
           
       </tr>
       <tr class="govuk-table__row">
-        <td class="govuk-table__cell">09/10/2019 - 12:30PM</td>
-            <td class="govuk-table__cell">214</td>
+        <td class="govuk-table__cell">06/10/2019 - 12:30pm</td>
+            <td class="govuk-table__cell">Organisation</td>
         <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
             Submitted
           </strong></td>
-          <td class="govuk-table__cell"> <a href="#" title="Download declaration">Download as PDF</a>
+          <td class="govuk-table__cell"> <a href="#" title="Download declaration">View</a>
       
           </td>
       </tr>
-      <tr class="govuk-table__row">
-        <td class="govuk-table__cell">09/08/2019 - 12:30PM</td>
-            <td class="govuk-table__cell">311</td>
-        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
-            Submitted
-          </strong></td>
-          <td class="govuk-table__cell"> <a href="#" title="Download declaration">Download as PDF</a>
-              
-          </td>
-
-      </tr>
-      <tr class="govuk-table__row">
-        <td class="govuk-table__cell">09/10/2018 - 12:30PM</td>
-            <td class="govuk-table__cell">256</td>
-        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
-            Submitted
-          </strong></td>
-          <td class="govuk-table__cell"> <a href="#" title="Download declaration">Download as PDF</a>
-          </td>
-
-      </tr>
-      <tr class="govuk-table__row">
-        <td class="govuk-table__cell">09/04/2018 - 12:30PM</td>
-            <td class="govuk-table__cell">278</td>
-        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">
-            Submitted
-          </strong></td>
-          <td class="govuk-table__cell"> <a href="#" title="Download declaration">Download as PDF</a>
-          </td>
-
-      </tr>
+      
+      
+      
     </tbody>
   </table>
 
