--- a/app/views/prototypes/second/answers-provider.html
+++ b/app/views/prototypes/second/answers-provider.html
@@ -36,7 +36,7 @@
         
 
 
-        <h2 class="govuk-heading-m">Vacancies</h2>
+        <h2 class="govuk-heading-l">Organisation</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
            
@@ -142,92 +142,9 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Time to fill English Level 4
-            </dt>
-            <dd class="govuk-summary-list__value">
-              2 to 3 months
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Time to fill English Level 5
-            </dt>
-            <dd class="govuk-summary-list__value">
-              2 to 3 months
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Time to fill English Level 3
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Less than one month
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Filled - English Level 4
-            </dt>
-            <dd class="govuk-summary-list__value">
-              No 2
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Filled - English Level 5
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Yes - filled temporarily 1
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Filled - Business Administration Level 3
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Yes - filled temporarily 1
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-
         </dl>
+
+        <a href="start-staff"  class="govuk-button govuk-button--secondary">Next questions</a>
 
         
         
@@ -274,7 +191,7 @@
           </div>
         </dl>
         
-        <h2 class="govuk-heading-m">My staff</h2>
+        <h2 class="govuk-heading-l">My staff</h2>
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
           <div class="govuk-accordion__section govuk-visually-hidden" id='contractor-4'>
             <div class="govuk-accordion__section-header">
