--- a/app/views/prototypes/second/answers-provider.html
+++ b/app/views/prototypes/second/answers-provider.html
@@ -36,7 +36,7 @@
         
 
 
-        <h2 class="govuk-heading-l">Organisation</h2>
+        <h2 class="govuk-heading-l">Your organisation</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
            
@@ -191,7 +191,7 @@
           </div>
         </dl>
         
-        <h2 class="govuk-heading-l">My staff</h2>
+        <h2 class="govuk-heading-l">Your staff</h2>
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
           <div class="govuk-accordion__section govuk-visually-hidden" id='contractor-4'>
             <div class="govuk-accordion__section-header">
