--- a/app/views/prototypes/new-items/retire.html
+++ b/app/views/prototypes/new-items/retire.html
@@ -38,7 +38,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Did they retire?
+        Why did they leave your organisation?
       </h1>
     </legend><br>
     <!--<span id="changed-name-hint" class="govuk-hint">
