--- a/app/views/prototypes/new-items/salary.html
+++ b/app/views/prototypes/new-items/salary.html
@@ -36,7 +36,7 @@
         <form action="/form-handler" method="post" novalidate>
           <div class="govuk-form-group">
             <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--xl" for="postcode">
-                What was the total amount they were paid for the year?
+                What was their salary?
               </label><br>
               
               <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
