--- a/app/views/prototypes/new-items/fte.html
+++ b/app/views/prototypes/new-items/fte.html
@@ -58,7 +58,7 @@
 <br>
 
 
-          <a href="date" class="govuk-button show-continue" style="display: inline;">
+          <a href="leave" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
