--- a/app/views/prototypes/new-items/leave.html
+++ b/app/views/prototypes/new-items/leave.html
@@ -57,7 +57,7 @@
 
           
 
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
+          <a href="date" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
         </form>
