--- a/app/views/prototypes/new-items/teaching-qualification.html
+++ b/app/views/prototypes/new-items/teaching-qualification.html
@@ -121,7 +121,7 @@
 <br>
 
 
-          <a href="complete-john-four" class="govuk-button show-continue" style="display: inline;">
+          <a href="industry" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
