--- a/app/views/prototypes/new-items/industry.html
+++ b/app/views/prototypes/new-items/industry.html
@@ -41,6 +41,10 @@
         How long did they spend working in industry - in a role that is relevant to the subject they teach?
       </h1>
     </legend><br>
+    
+    <div id="sign-in-hint" class="govuk-hint">
+      Tell us what time they spent in a relevant industry before they joined further education
+    </div><br>
    
         <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
           <div class="govuk-radios__item">
