--- a/app/views/prototypes/new-items/contract.html
+++ b/app/views/prototypes/new-items/contract.html
@@ -40,7 +40,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is their main type of contract?
+        What was their main type of contract?
       </h1>
     </legend><br>
     
