--- a/app/views/prototypes/new-items/retire.html
+++ b/app/views/prototypes/new-items/retire.html
@@ -68,17 +68,10 @@
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-2" name="contact" type="radio" value="phone" data-aria-controls="conditional-contact-2">
             <label class="govuk-label govuk-radios__label" for="contact-2">
-              Reason not known
+              End of contract
             </label>
           </div>
           
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
-            <label class="govuk-label govuk-radios__label" for="contact-3">
-              Retired
-            </label>
-          </div>
-
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
             <label class="govuk-label govuk-radios__label" for="contact-3">
@@ -89,14 +82,21 @@
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
             <label class="govuk-label govuk-radios__label" for="contact-3">
-              End of contract
+              Retired
             </label>
           </div>
 
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
             <label class="govuk-label govuk-radios__label" for="contact-3">
-              Death
+              Died
+            </label>
+          </div>
+
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
+            <label class="govuk-label govuk-radios__label" for="contact-3">
+              Reason not known
             </label>
           </div>
         
