--- a/app/views/prototypes/new-items/retire.html
+++ b/app/views/prototypes/new-items/retire.html
@@ -46,21 +46,21 @@
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="email" data-aria-controls="conditional-contact">
             <label class="govuk-label govuk-radios__label" for="contact">
-              Moved outside the sector
+              Resigned: Moved outside the sector
             </label>
           </div>
           
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-2" name="contact" type="radio" value="phone" data-aria-controls="conditional-contact-2">
             <label class="govuk-label govuk-radios__label" for="contact-2">
-              Moved for better pay
+              Resigned: Moved for better pay
             </label>
           </div>
           
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
             <label class="govuk-label govuk-radios__label" for="contact-3">
-              Heavy workload
+              Resigned: Heavy workload
             </label>
           </div>
 
@@ -86,12 +86,7 @@
             </label>
           </div>
 
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
-            <label class="govuk-label govuk-radios__label" for="contact-3">
-              Died
-            </label>
-          </div>
+          
 
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
