--- a/app/views/prototypes/new-items/salary.html
+++ b/app/views/prototypes/new-items/salary.html
@@ -36,10 +36,10 @@
         <form action="/form-handler" method="post" novalidate>
           <div class="govuk-form-group">
             <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--xl" for="postcode">
-                What was their salary?
+                What is their annual salary?
               </label>
               
-              <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
+              <!--<span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>-->
               <span id="sort-code-hint" class="govuk-hint"><br><br>
     For example, £26,386
   </span>
