--- a/app/views/prototypes/new-items/salary.html
+++ b/app/views/prototypes/new-items/salary.html
@@ -46,22 +46,30 @@
 
             </h1>
             <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" (£)>
-          </div><br><br></form>
+          </div><br></form>
 
-          <form action="/form-handler" method="post" novalidate>
-            <div class="govuk-form-group">
-              <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="postcode">
-                Or what was their hourly rate of pay?
-                </label>
-                
-                </h1>
-                <span id="sort-code-hint" class="govuk-hint"><br><br>
-      For example, £20.30
-    </span>
-  
-              </h1>
-              <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" (£)>
-            </div><br><br></form>
+          <details class="govuk-details" data-module="govuk-details">
+            <summary class="govuk-details__summary">
+              <span class="govuk-details__summary-text">
+                If they get paid by the hour
+              </span>
+            </summary>
+            <div class="govuk-details__text">
+              <form action="/form-handler" method="post" novalidate>
+                <div class="govuk-form-group">
+                  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="postcode">
+                      What is their hourly rate?
+                    </label>
+                    
+
+                    <span id="sort-code-hint" class="govuk-hint"><br>
+          For example, £20.00
+        </span>
+      
+                  </h1>
+                  <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" (£)>
+                </div></form></div>
+          </details><br>
   
 
           
