--- a/app/views/prototypes/new-items/funding.html
+++ b/app/views/prototypes/new-items/funding.html
@@ -80,7 +80,7 @@
 <br>
 
 
-          <a href="complete-john-four" class="govuk-button show-continue" style="display: inline;">
+          <a href="teaching-qualification" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
