--- a/app/views/prototypes/new-items/retire.html
+++ b/app/views/prototypes/new-items/retire.html
@@ -46,21 +46,21 @@
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="email" data-aria-controls="conditional-contact">
             <label class="govuk-label govuk-radios__label" for="contact">
-              Resigned: Moved outside the sector
+              Moved to a different FE provider
             </label>
           </div>
           
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-2" name="contact" type="radio" value="phone" data-aria-controls="conditional-contact-2">
             <label class="govuk-label govuk-radios__label" for="contact-2">
-              Resigned: Moved for better pay
+              Moved to a role in education but outside FE
             </label>
           </div>
           
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
             <label class="govuk-label govuk-radios__label" for="contact-3">
-              Resigned: Heavy workload
+              Moved to a role outside education
             </label>
           </div>
 
@@ -68,17 +68,10 @@
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-2" name="contact" type="radio" value="phone" data-aria-controls="conditional-contact-2">
             <label class="govuk-label govuk-radios__label" for="contact-2">
-              End of contract
+              Became self-employed
             </label>
           </div>
           
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
-            <label class="govuk-label govuk-radios__label" for="contact-3">
-              Redundancy
-            </label>
-          </div>
-
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
             <label class="govuk-label govuk-radios__label" for="contact-3">
@@ -86,7 +79,35 @@
             </label>
           </div>
 
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
+            <label class="govuk-label govuk-radios__label" for="contact-3">
+              Resigned
+            </label>
+          </div>
+
           
+
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
+            <label class="govuk-label govuk-radios__label" for="contact-3">
+              Made redundant or lost job
+            </label>
+          </div>
+
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
+            <label class="govuk-label govuk-radios__label" for="contact-3">
+              Career break
+            </label>
+          </div>
+
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
+            <label class="govuk-label govuk-radios__label" for="contact-3">
+              Ill health or death
+            </label>
+          </div>
 
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text" data-aria-controls="conditional-contact-3">
