--- a/app/views/prototypes/new-items/what-teaching-qualification.html
+++ b/app/views/prototypes/new-items/what-teaching-qualification.html
@@ -136,7 +136,7 @@
 <br>
 
 
-          <a href="teaching-qualification" class="govuk-button show-continue" style="display: inline;">
+          <a href="what-training" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
