--- a/app/views/prototypes/new-items/add.html
+++ b/app/views/prototypes/new-items/add.html
@@ -166,80 +166,149 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
-          White
+          English / Welsh / Scottish / Northern Irish / British
         </label>
-        <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-      <li>English / Welsh / Scottish / Northern Irish / British
-      </li>
+        
+      </div>
 
-      <li>Irish</li>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+          Irish
+        </label>
+        
+      </div>
 
-      <li>Gypsy or Irish Traveller</li>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+          Gypsy or Irish Traveller
+        </label>
+        
+      </div>
 
-      <li>Any other White background</li>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+          Any Other White background
+        </label>
+        
+      </div>
 
-    </ul>
-        </span>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+          White and Black Caribbean
+        </label>
+        
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="black-african-black-british-or-caribbean" aria-describedby="ethnic-group-2-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-2">
-          Mixed / Multiple ethnic groups
+          White and Black African
         </label>
-        <span id="ethnic-group-2-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>White and Black Caribbean</li>
-<li>White and Black African</li>
-<li>White and Asian</li>
-<li>Any other Mixed / Multiple ethnic background</li>
-        </ul></span>
+        
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
-          Asian / Asian British
+          White and Asian
         </label>
-        <span id="ethnic-group-3-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>Indian</li>
-<li>Pakistani</li>
-<li>Bangladeshi</li>
-<li>Any other Asian background</li>
-        </ul>
-        </span>
+        
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-4" name="ethnic-group" type="radio" value="white" aria-describedby="ethnic-group-4-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-4">
-          Black / African / Caribbean / Black British
+          Any Other Mixed / multiple ethnic background
         </label>
-        <span id="ethnic-group-4-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>African</li>
-<li>Caribbean</li>
+        
 
-<li>Any other Black / African / Caribbean background</li>
-        </ul>
-        </span>
+
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
-          Other ethnic group
+          Indian
         </label>
-        <span id="ethnic-group-5-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>Arab</li>
-          <li>Any other ethnic group</li>
-        </ul>
-        </span>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+          Pakistani
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+          Bangladeshi
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+          Chinese
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+          Any other Asian background
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+          African
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+          Caribbean
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+          Any other Black / African / Caribbean background
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+          Arab
+        </label>
+        
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+          Any other ethnic group
+        </label>
+        
       </div>
       <div class="govuk-radios__divider">or</div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-6" name="ethnic-group" type="radio" value="prefer-not-to-say">
         <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-6">
-          Prefer not to say
+          Not provided
         </label>
       </div>
     </div>
